--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Aril Dewantara">
 
   <title>Aril Dewantara</title>
-  <link rel="icon" type="image/gif" href=""/>
+  <link rel="icon" type="image/gif" href="img/avatar.jpg"/>
 
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -46,10 +46,10 @@
     </div>
   </nav>
 
-  <header class="masthead bg-primary text-white text-center rounded shadow mr-1 ml-1 mt-1">
+  <header class="masthead bg-primary text-white text-center rounded-bottom shadow">
     <div class="container d-flex align-items-center flex-column">
 
-      <img class="masthead-avatar mb-5 rounded-circle" src="img/avatar.png" alt="">
+      <img class="masthead-avatar mb-5 rounded-circle" src="img/avatar.jpg" alt="">
 
       <h1 class="masthead-heading mb-0">Aril Dewantara</h1>
 
@@ -171,7 +171,7 @@
       <h3 class="text-center text-secondary mb-0">arild2998@gmail.com</h3>
   </section>
 
-  <footer class="footer text-center">
+  <footer class="footer text-center rounded-top">
     <div class="container">
       <div class="row">
 
@@ -225,10 +225,9 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
 
   <script src="js/script.min.js"></script>
-
+  
 </body>
 
 </html>
