--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Aril Dewantara">
 
   <title>Aril Dewantara</title>
-  <link rel="icon" type="image/gif" href="img/avatar.jpg"/>
+  <link rel="icon" type="image/gif" href="img/rick.png"/>
 
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
