--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <header class="masthead bg-primary text-white text-center rounded-bottom shadow">
     <div class="container d-flex align-items-center flex-column">
 
-      <img class="masthead-avatar mb-5 rounded-circle" src="img/avatar.jpg" alt="">
+      <img class="masthead-avatar mb-5 rounded-circle" src="img/rick.png" alt="">
 
       <h1 class="masthead-heading mb-0">Aril Dewantara</h1>
 
