--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="divider-custom-line align-items-center"></div>
       </div>
 
-      <p class="masthead-subheading font-weight-light mb-0">Otaku - Student</p>
+      <p class="masthead-subheading font-weight-light mb-0">Connoisseur</p>
 
     </div>
   </header>
