--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Aril Dewantara atau biasa dipanggil Aril adalah anak laki-laki yang mencoba menjadi seseorang  yang berguna di kemajuan dunia IT.</p>
+          <p class="lead">biasa dipanggil aril lahir di baturaja sumatra selatan indonesia.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Ia adalah seorang Introvert oleh karena itu orang-orang di sekitarnya memanggil ia seorang yang pendiam. Ia mempunyai hobi yaitu menonton <b>anime</b>, dan membaca <b>manga</b>. Ia juga mempunyai cita-cita menjadi <b>IT expert</b>.</p>
+          <p class="lead">gitaran, baca buku, dan minum kopi</p>
         </div>
       </div>
 
